*1.1.7* More Performance Upgrades and Fixes
**BaseFinder and NewerNewChunks Updates**
- Made the OverWorld and Nether OldChunk detectors that are enabled by default use chunk sections for scanning instead of scanning the whole chunk between certain Y values. This allows us to skip scanning empty sections which may drastically improve performance with those options.
- Made removing chunk data outside of the renderdistance setting for BaseFinder and NewerNewChunks an option instead of automatically if SaveData and LoadData are disabled. It's probably not a good idea to enable this if you are saving and/or loading the chunk data.
- Found and stopped an integer that was freely increasing forever in NewerNewChunks and BaseFinder. This might improve performance maybe idk
- Replaced the usage of Strings with Paths for file locations where it was applicable in NewerNewChunks for file paths.
- Replaced usage of IO operations with NIO operations for better (and maybe more performant) file writing and loading in NewerNewChunks and BaseFinder.

**New Module and A Bugfix**
- Added TrouserBlockESP module. It's just a block esp module that uses chunk sections for block scanning. I was trying to bypass antixray plugins but failed and decided just to keep this module (I was gonna try using palettes but that didn't work). 
- Fixed ExplosionAura kicking you from the game.